# nidra

./: .gitignore  AppImageBuilder.yml  BUILD_INSTRUCTIONS.md  NIDRA.manifest  NIDRA.spec  NIDRA.spec.bak  README.md  README.md.bak  config.txt  deps_annotated.txt  launch_gui.py  nidra.nuitka-package.config.yml  pyproject.toml  requirements.txt  setup.py  task_summary_fix_channel_select_button.md  uniform_scaling_guide.md  viewport_scaling_fix.md
.github/: FUNDING.yml
.github/workflows/: build-release.yml  build.yml  build.yml.20250930203552.bak  build.yml.bak  build.yml.bkp  build.yml_test_macos.bak  build.yml_windows_screensizetester.bak
.github/workflows/old/: build.yml-triedmsys2build.bak  build.yml_nuitkaandpyinstaller.bak
NIDRA/: __init__.py  __main__.py  cli.py  config.py  dummy.c  forehead_scorer.py  plotting.py  plotting_backup.py  psg_scorer.py  utils.py
NIDRA/nidra_gui/: app.py  launcher.py  neutralino.config.json
NIDRA/nidra_gui/neutralino/: neutralino-mac_10  neutralino.config.json
NIDRA/nidra_gui/neutralino/resources/static/: script.js  style.css
NIDRA/nidra_gui/neutralino/resources/templates/: index.html  stopped.html
NIDRA/nidra_gui/resources/static/: script.js  style.css
NIDRA/nidra_gui/resources/templates/: index.html
docs/: index.html  manual.html  manual_backup.html  style.css
setup/: NIDRA.spec  build.sh  build_linux.sh  build_macos.sh  build_neutralino_macos.sh  build_window.bat  generate_ico.py
setup/hooks/: hook-mne.py
