[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NIDRA"
version = "0.1.0"
authors = [
  { name="Paul Zerr", email="zerr.paul@gmail.com" },
]
description = "A tool for scoring sleep data from PSG and forehead EEG recordings."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "mne",
    "seaborn",
    "pandas",
    "onnxruntime",
    "matplotlib",
    "Flask",
    "filelock>=3.9.0",
    "pyyaml",
    "absl-py",
    "h5py",
    "psutil",
    "pyinstaller",
    "pywebview"
]

[project.urls]
"Homepage" = "https://github.com/p-zerr/NIDRA"

[project.scripts]
nid = "NIDRA.cli:run_cli"
nidra = "NIDRA.nidra_gui.launcher:main"

[tool.setuptools]
include-package-data = true
packages = {find = {}}