[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NIDRA"
version = "0.1.0"
authors = [
  { name="Paul Zerr", email="zerr.paul@gmail.com" },
]
description = "A tool for scoring sleep data from PSG and forehead EEG recordings."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "scipy",
    "mne",
    "seaborn",
    "pandas",
    "matplotlib",
    "Flask",
    "pyinstaller",
    "huggingface_hub",
    "hf_xet",
    "appdirs",
    "requests",
    "pywebview",
    "psutil",
    "numpy<2 ; sys_platform == 'darwin'",
    "onnxruntime==1.16.3 ; sys_platform == 'darwin'",
    "numpy>=2.0.0 ; sys_platform != 'darwin'",
    "onnxruntime>=1.19.0 ; sys_platform != 'darwin'",
]

[project.urls]
"Homepage" = "https://github.com/p-zerr/NIDRA"

[project.scripts]
nid = "NIDRA.cli:run_cli"
nidra = "NIDRA.nidra_gui.launcher:main"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"docs" = ["**"]
